tiny/parser/y.output
Grammar

    0 $accept: Tiny $end

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.'

    2 Dclns: VAR Dclns_1
    3      | %empty

    4 Dclns_1: %empty
    5        | Dcln ';' Dclns_1

    6 Dcln: Dcln_1

    7 Dcln_1: Name ':' Type
    8       | Name ',' Dcln_1

    9 Type: INTEGER
   10     | BOOLEAN

   11 Body: BEGINX Body_1

   12 Body_1: Statement END
   13       | Statement ';' Body_1

   14 Statement: Name ASSIGNMENT Expression
   15          | OUTPUT '(' Expression ')'
   16          | IF Expression THEN Statement ELSE Statement
   17          | WHILE Expression DO Statement
   18          | Body
   19          | %empty

   20 Expression: Term
   21           | Term LTE Term

   22 Term: Factor
   23     | Factor '+' Term

   24 Factor: Factor '*' Primary
   25       | Primary

   26 Primary: '-' Primary
   27        | READ
   28        | Name
   29        | INTEGER_NUM
   30        | '(' Expression ')'

   31 Name: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 30
')' (41) 15 30
'*' (42) 24
'+' (43) 23
',' (44) 8
'-' (45) 26
'.' (46) 1
':' (58) 1 7
';' (59) 5 13
error (256)
END (258) 12
VAR (259) 2
IDENTIFIER (260) 31
IF (261) 16
READ (262) 27
ELSE (263) 16
THEN (264) 16
WHILE (265) 17
OUTPUT (266) 15
DO (267) 17
BEGINX (268) 11
BOOLEAN (269) 10
INTEGER_NUM (270) 29
INTEGER (271) 9
LTE (272) 21
ASSIGNMENT (273) 14
PROGRAM (274) 1


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
Tiny (30)
    on left: 1, on right: 0
Dclns (31)
    on left: 2 3, on right: 1
Dclns_1 (32)
    on left: 4 5, on right: 2 5
Dcln (33)
    on left: 6, on right: 5
Dcln_1 (34)
    on left: 7 8, on right: 6 8
Type (35)
    on left: 9 10, on right: 7
Body (36)
    on left: 11, on right: 1 18
Body_1 (37)
    on left: 12 13, on right: 11 13
Statement (38)
    on left: 14 15 16 17 18 19, on right: 12 13 16 17
Expression (39)
    on left: 20 21, on right: 14 15 16 17 30
Term (40)
    on left: 22 23, on right: 20 21 23
Factor (41)
    on left: 24 25, on right: 22 23 24
Primary (42)
    on left: 26 27 28 29 30, on right: 24 25 26
Name (43)
    on left: 31, on right: 1 7 8 14 28


State 0

    0 $accept: . Tiny $end

    PROGRAM  shift, and go to state 1

    Tiny  go to state 2


State 1

    1 Tiny: PROGRAM . Name ':' Dclns Body Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 4


State 2

    0 $accept: Tiny . $end

    $end  shift, and go to state 5


State 3

   31 Name: IDENTIFIER .

    $default  reduce using rule 31 (Name)


State 4

    1 Tiny: PROGRAM Name . ':' Dclns Body Name '.'

    ':'  shift, and go to state 6


State 5

    0 $accept: Tiny $end .

    $default  accept


State 6

    1 Tiny: PROGRAM Name ':' . Dclns Body Name '.'

    VAR  shift, and go to state 7

    $default  reduce using rule 3 (Dclns)

    Dclns  go to state 8


State 7

    2 Dclns: VAR . Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 9
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 8

    1 Tiny: PROGRAM Name ':' Dclns . Body Name '.'

    BEGINX  shift, and go to state 13

    Body  go to state 14


State 9

    2 Dclns: VAR Dclns_1 .

    $default  reduce using rule 2 (Dclns)


State 10

    5 Dclns_1: Dcln . ';' Dclns_1

    ';'  shift, and go to state 15


State 11

    6 Dcln: Dcln_1 .

    $default  reduce using rule 6 (Dcln)


State 12

    7 Dcln_1: Name . ':' Type
    8       | Name . ',' Dcln_1

    ':'  shift, and go to state 16
    ','  shift, and go to state 17


State 13

   11 Body: BEGINX . Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Body_1     go to state 22
    Statement  go to state 23
    Name       go to state 24


State 14

    1 Tiny: PROGRAM Name ':' Dclns Body . Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 25


State 15

    5 Dclns_1: Dcln ';' . Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 26
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 16

    7 Dcln_1: Name ':' . Type

    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 28

    Type  go to state 29


State 17

    8 Dcln_1: Name ',' . Dcln_1

    IDENTIFIER  shift, and go to state 3

    Dcln_1  go to state 30
    Name    go to state 12


State 18

   16 Statement: IF . Expression THEN Statement ELSE Statement

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 35
    Term        go to state 36
    Factor      go to state 37
    Primary     go to state 38
    Name        go to state 39


State 19

   17 Statement: WHILE . Expression DO Statement

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 40
    Term        go to state 36
    Factor      go to state 37
    Primary     go to state 38
    Name        go to state 39


State 20

   15 Statement: OUTPUT . '(' Expression ')'

    '('  shift, and go to state 41


State 21

   18 Statement: Body .

    $default  reduce using rule 18 (Statement)


State 22

   11 Body: BEGINX Body_1 .

    $default  reduce using rule 11 (Body)


State 23

   12 Body_1: Statement . END
   13       | Statement . ';' Body_1

    END  shift, and go to state 42
    ';'  shift, and go to state 43


State 24

   14 Statement: Name . ASSIGNMENT Expression

    ASSIGNMENT  shift, and go to state 44


State 25

    1 Tiny: PROGRAM Name ':' Dclns Body Name . '.'

    '.'  shift, and go to state 45


State 26

    5 Dclns_1: Dcln ';' Dclns_1 .

    $default  reduce using rule 5 (Dclns_1)


State 27

   10 Type: BOOLEAN .

    $default  reduce using rule 10 (Type)


State 28

    9 Type: INTEGER .

    $default  reduce using rule 9 (Type)


State 29

    7 Dcln_1: Name ':' Type .

    $default  reduce using rule 7 (Dcln_1)


State 30

    8 Dcln_1: Name ',' Dcln_1 .

    $default  reduce using rule 8 (Dcln_1)


State 31

   27 Primary: READ .

    $default  reduce using rule 27 (Primary)


State 32

   29 Primary: INTEGER_NUM .

    $default  reduce using rule 29 (Primary)


State 33

   30 Primary: '(' . Expression ')'

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 46
    Term        go to state 36
    Factor      go to state 37
    Primary     go to state 38
    Name        go to state 39


State 34

   26 Primary: '-' . Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Primary  go to state 47
    Name     go to state 39


State 35

   16 Statement: IF Expression . THEN Statement ELSE Statement

    THEN  shift, and go to state 48


State 36

   20 Expression: Term .
   21           | Term . LTE Term

    LTE  shift, and go to state 49

    $default  reduce using rule 20 (Expression)


State 37

   22 Term: Factor .
   23     | Factor . '+' Term
   24 Factor: Factor . '*' Primary

    '+'  shift, and go to state 50
    '*'  shift, and go to state 51

    $default  reduce using rule 22 (Term)


State 38

   25 Factor: Primary .

    $default  reduce using rule 25 (Factor)


State 39

   28 Primary: Name .

    $default  reduce using rule 28 (Primary)


State 40

   17 Statement: WHILE Expression . DO Statement

    DO  shift, and go to state 52


State 41

   15 Statement: OUTPUT '(' . Expression ')'

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 53
    Term        go to state 36
    Factor      go to state 37
    Primary     go to state 38
    Name        go to state 39


State 42

   12 Body_1: Statement END .

    $default  reduce using rule 12 (Body_1)


State 43

   13 Body_1: Statement ';' . Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Body_1     go to state 54
    Statement  go to state 23
    Name       go to state 24


State 44

   14 Statement: Name ASSIGNMENT . Expression

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 55
    Term        go to state 36
    Factor      go to state 37
    Primary     go to state 38
    Name        go to state 39


State 45

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.' .

    $default  reduce using rule 1 (Tiny)


State 46

   30 Primary: '(' Expression . ')'

    ')'  shift, and go to state 56


State 47

   26 Primary: '-' Primary .

    $default  reduce using rule 26 (Primary)


State 48

   16 Statement: IF Expression THEN . Statement ELSE Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 57
    Name       go to state 24


State 49

   21 Expression: Term LTE . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Term     go to state 58
    Factor   go to state 37
    Primary  go to state 38
    Name     go to state 39


State 50

   23 Term: Factor '+' . Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Term     go to state 59
    Factor   go to state 37
    Primary  go to state 38
    Name     go to state 39


State 51

   24 Factor: Factor '*' . Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Primary  go to state 60
    Name     go to state 39


State 52

   17 Statement: WHILE Expression DO . Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 61
    Name       go to state 24


State 53

   15 Statement: OUTPUT '(' Expression . ')'

    ')'  shift, and go to state 62


State 54

   13 Body_1: Statement ';' Body_1 .

    $default  reduce using rule 13 (Body_1)


State 55

   14 Statement: Name ASSIGNMENT Expression .

    $default  reduce using rule 14 (Statement)


State 56

   30 Primary: '(' Expression ')' .

    $default  reduce using rule 30 (Primary)


State 57

   16 Statement: IF Expression THEN Statement . ELSE Statement

    ELSE  shift, and go to state 63


State 58

   21 Expression: Term LTE Term .

    $default  reduce using rule 21 (Expression)


State 59

   23 Term: Factor '+' Term .

    $default  reduce using rule 23 (Term)


State 60

   24 Factor: Factor '*' Primary .

    $default  reduce using rule 24 (Factor)


State 61

   17 Statement: WHILE Expression DO Statement .

    $default  reduce using rule 17 (Statement)


State 62

   15 Statement: OUTPUT '(' Expression ')' .

    $default  reduce using rule 15 (Statement)


State 63

   16 Statement: IF Expression THEN Statement ELSE . Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 64
    Name       go to state 24


State 64

   16 Statement: IF Expression THEN Statement ELSE Statement .

    $default  reduce using rule 16 (Statement)
